# TaskManager

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
main/: admin.py  serializers.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_user_role.py  0003_tag_task.py  0004_alter_task_changed_at_alter_task_created_at_and_more.py  0005_rename_changed_at_task_start_at_and_more.py  0006_alter_task_assignee_alter_task_author_and_more.py  0007_user_date_of_birth_user_phone.py  0008_status_alter_task_status.py
main/models/: __init__.py  status.py  task.py  user.py
main/services/: __init__.py  mail.py  single_resource.py  storage_backends.py
task_manager/: celery.py  settings.py  tasks.py  urls.py
test/: test_admin.py
tests/: base.py  no_test_send_mail.py  test_countdown.py  test_token.py  test_user.py
tests/factories/: user_factory.py
